# dynamicmultiplex

bayesnet/: DESCRIPTION  README.md
bayesnet/R/: fit_multilayer_identity_ties.R  fit_multilayer_jaccard.R  fit_multilayer_overlap.R  multilayer_utils.R  simulate_multiplex_layers.R
python_code/: README.md  pyproject.toml
python_code/src/dynamic_multiplex/: __init__.py  fit_multilayer_identity_ties.py  fit_multilayer_jaccard.py  fit_multilayer_overlap.py  multilayer_utils.py  simulate_multiplex_layers.py
python_code/tests/: test_multilayer.py
r_code/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
r_code/R/: fit_multilayer_identity_ties.R  fit_multilayer_jaccard.R  fit_multilayer_overlap.R  multilayer_utils.R  plot_multilayer_visualizations.R  simulate_multiplex_layers.R
r_code/tests/: testthat.R
r_code/tests/testthat/: test-fit-functions.R  test-plotting-functions.R
